--- a/style.css
+++ b/style.css
@@ -1,21 +1,105 @@
-html {
-  outline: none;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.content {
-  margin: 44px;
-  width: 400px;
+body {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(to bottom, #68eacc 0%, #4978e8 100%);
 }
 
-form {
-  margin-top: 61px;
+.Books {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 150px;
 }
 
-.removebtn {
-  background-color: red;
+.Books .container {
+  width: 600px;
+  border: 1px solid rgb(180, 180, 180);
+  padding: 20px;
 }
 
-h1 {
-  padding-bottom: 22px;
+.Books .container .title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.Books .container .tablehr {
+  max-width: 100px;
+  margin: 20px auto;
+  border: none;
+  height: 2px;
+  border-radius: 20px;
+  background-color: gray;
+}
+
+.Books .container .inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  margin: 0 auto;
+}
+
+.Books .container .inputs input {
+  display: block;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 221, 221);
+}
+
+.Books .container .inputs .add {
+  width: 100px;
+  text-align: center;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 8px;
+}
+
+.Books .container .inputs .add:hover {
+  background-color: rgb(187, 187, 187);
+}
+
+.Books .container .booksList {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.Books .container .booksList .task {
+  display: flex;
+  position: relative;
+  margin-bottom: 5px;
+}
+
+.Books .container .booksList .task td {
+  padding: 8px 0;
+}
+
+.Books .container .booksList .task .del {
+  justify-items: flex-end;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  padding: 0 20px;
+  border: none;
+  background-color: rgba(135, 152, 168, 0.699);
+  text-transform: uppercase;
+}
+
+.Books .container .booksList .task .del:hover {
+  background-color: rgb(187, 187, 187);
+}
+
+.Books .container .booksList .task:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+.Books .container .booksList .task:nth-child(odd):hover {
+  background-color: rgb(216, 216, 216);
 }
