--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ body {
   margin: 0 auto;
 }
 
+.addBook form input {
+  padding: 10px;
+}
+
 .Books .container .inputs input {
   display: block;
   margin-bottom: 20px;
@@ -51,6 +55,12 @@ body {
   width: 100%;
   border-radius: 8px;
   border: 1px solid rgb(221, 221, 221);
+}
+
+.addBook .add {
+  width: 22%;
+  margin-left: 78%;
+  padding: 10px;
 }
 
 .Books .container .inputs .add {
@@ -102,4 +112,69 @@ body {
 
 .Books .container .booksList .task:nth-child(odd):hover {
   background-color: rgb(216, 216, 216);
+}
+
+.navbar {
+  border: 1px solid black;
+  height: 99px;
+  margin: 16px;
+}
+
+.navbar h2 {
+  margin-left: 22px;
+}
+
+.navbar ul {
+  margin-right: 23px;
+}
+
+.navbar ul li {
+  font-size: 25px;
+  padding: 20px;
+  border-right: 1px solid black;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact p {
+  font-size: 37px;
+  row-gap: 32px;
+}
+
+.contact ul {
+  margin-top: 20px;
+}
+
+.contact h1 {
+  padding-bottom: 80px;
+}
+
+footer {
+  border: 1px solid black;
+  height: 42px;
+  position: fixed;
+  padding: 10px 10px 0 10px;
+  bottom: 0;
+  width: 100%;
+}
+
+footer h5 {
+  margin: 7px 0 0 31px;
+}
+
+.addBook {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.addBook form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  width: 30%;
 }
