--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 150px;
 }
 
 .Books .container {
@@ -131,11 +130,18 @@ body {
 .navbar ul li {
   font-size: 25px;
   padding: 20px;
+}
+
+.navbar ul li:nth-last-child(n+2) {
   border-right: 1px solid black;
 }
 
+.navbar ul li:hover {
+  color: red;
+}
+
 .contact {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 }
